--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/logo192.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="react, tailwindcss, unsplash, framer motion">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site made using Reactjs and TailwindCss with the unsplash api."
     />
+    <meta name="author" content="Anas Tazir">
+    <meta name="publisher" content="Anas Tazir">
+    <meta name="copyright" content="Anas Tazir">
+    <meta name="page-topic" content="Media">
+    <meta name="page-type" content="Gallery">
+    <meta name="robots" content="index, follow">
+    <meta name="audience" content="Everyone">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link
